--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.16",
+        "yajra/laravel-datatables": "^12",
         "yajra/laravel-datatables-oracle": "^12"
     },
     "require-dev": {
